Migrate RestconfValidationTest to JUnit5
Migrate tests cases and improve assertions.

Change-Id: I8266abb1cbbcbb72a4a7635a0c21d26ac9a48c12
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>